Adição de funcionalidades
Criação do banco de dados e dos repositorys responsaveis por cada tabela.
Criação da função de chamado da API do Gemini (Futuramente trocar para ele analisar os dados do grafico)

--- a/app/src/main/res/layout/tela_inicial.xml
+++ b/app/src/main/res/layout/tela_inicial.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <View
         android:id="@+id/FundoGradiente"
         android:layout_width="wrap_content"
@@ -30,8 +31,8 @@
 
     <ImageView
         android:id="@+id/LogoApp"
-        android:layout_width="90dp"
-        android:layout_height="77dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
@@ -76,23 +77,120 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/GrupoQuadradoBaixoGrafico"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/QuadradoGrafico">
 
-            <View
-                android:id="@+id/QuadradoLista"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:maxHeight="300dp"
-                android:visibility="visible"
+
+            <ViewSwitcher
+                android:id="@+id/SwitcherDasInfosDoGrafico"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:background="#FFFFFF"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/quadradoBaixoGrafico"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+                <!-- Layout para o menu lista de dados do grafico -->
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/GrupoDados"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/QuadradoListaDados"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/ButtonTrocarParaViewAnalise"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_ir_analise"
+                        android:text="Analisar"
+                        app:layout_constraintBottom_toBottomOf="@+id/QuadradoListaDados"
+                        app:layout_constraintEnd_toEndOf="@+id/QuadradoListaDados"
+                        app:layout_constraintTop_toTopOf="@+id/QuadradoListaDados">
+
+                    </ImageButton>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/GrupoAnalise"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:id="@+id/QuadradoAnalisarDados"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ScrollView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/buttonTrocarParaViewDados2"
+                        app:layout_constraintStart_toEndOf="@+id/buttonTrocarParaViewDados"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <TextView
+                            android:id="@+id/textRespostaIA"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+                    </ScrollView>
+
+                    <ImageButton
+                        android:id="@+id/buttonTrocarParaViewDados"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_voltar_lista"
+                        android:text="Dados"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </ImageButton>
+
+                    <ImageButton
+                        android:id="@+id/buttonTrocarParaViewDados2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_voltar_lista"
+                        android:text="Dados"
+                        android:visibility="invisible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </ImageButton>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <!-- Layout para o menu analisar dados -->
+
+            </ViewSwitcher>
 
             <View
                 android:id="@+id/quadradoBaixoGrafico"
@@ -102,7 +200,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/QuadradoLista" />
+                app:layout_constraintTop_toBottomOf="@+id/SwitcherDasInfosDoGrafico" />
 
             <ImageButton
                 android:id="@+id/setaBaixo"
@@ -116,6 +214,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/quadradoBaixoGrafico"
                 app:srcCompat="@drawable/seta_para_baixo" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -151,6 +250,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico" />
 
+
         <Button
             android:id="@+id/buttonGerenciamentoClientes"
             android:layout_width="0dp"
@@ -158,8 +258,8 @@
             android:layout_marginStart="64dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="64dp"
-            android:autoText="true"
             android:background="@drawable/button_gerenciamento_clientes"
+            android:drawableStart="@drawable/clientes_icone"
             android:text="Gerenciamento de Clientes"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -174,6 +274,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_gerenciamento_servicos"
+            android:drawableStart="@drawable/servico_icone"
             android:text="Gerenciamento de Serviços"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
