--- a/app/src/main/res/layout/tela_gerenciamento_cliente.xml
+++ b/app/src/main/res/layout/tela_gerenciamento_cliente.xml
@@ -3,4 +3,215 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/fundoGradiente"
+        android:layout_width="wrap_content"
+        android:layout_height="140dp"
+        android:background="@drawable/gradiente_fundo_loading"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textGerenciamentoCliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Gerenciamento de Clientes"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintEnd_toEndOf="@+id/fundoGradiente"
+        app:layout_constraintStart_toStartOf="@+id/fundoGradiente"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.50" />
+
+    <ImageView
+        android:id="@+id/logoApp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fundoGradiente"
+        app:srcCompat="@drawable/logo_app__1_" />
+
+    <ImageButton
+        android:id="@+id/imageVoltarTela"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#00FFFFFF"
+        android:rotation="90"
+        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/seta_para_baixo" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/GrupoIcones"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/QuadradoGrafico"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/quadrado_grafico_inicio_parte_cima"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textListaClientes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lista de Clientes"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico2"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+            app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico" />
+
+
+        <View
+            android:id="@+id/linhaQuadradoGrafico"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="#BDBDBD"
+            app:layout_constraintBottom_toBottomOf="@+id/QuadradoGrafico"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico" />
+
+        <TextView
+            android:id="@+id/textNomeCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Nome"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
+
+        <TextView
+            android:id="@+id/textTelefoneCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="Telefone"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
+
+        <View
+            android:id="@+id/linhaQuadradoGrafico2"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="#000000"
+            app:layout_constraintBottom_toBottomOf="@+id/QuadradoGrafico"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+            app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/GrupoQuadradoBaixoGrafico"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/QuadradoGrafico">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/QuadradoLista"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxHeight="500dp"
+                app:layout_constraintBottom_toTopOf="@+id/quadradoBaixoGrafico"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/quadradoBaixoGrafico"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/quadrado_grafico_inicio_parte_baixo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/QuadradoLista" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageButton
+            android:id="@+id/imageMaisOpcoes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#00FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/button_mais_opcoes" />
+
+        <ImageButton
+            android:id="@+id/imageFiltrarLista"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone"
+            android:backgroundTint="#00FFFFFF"
+            app:layout_constraintBottom_toTopOf="@+id/imageMaisOpcoes"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/button_filtrar_lista" />
+
+        <ImageButton
+            android:id="@+id/imageAdicionarLista"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone"
+            android:backgroundTint="#00FFFFFF"
+            app:layout_constraintBottom_toTopOf="@+id/imageFiltrarLista"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/button_adicionar_lista" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
