--- a/app/src/main/res/layout/tela_inicial.xml
+++ b/app/src/main/res/layout/tela_inicial.xml
@@ -105,14 +105,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/QuadradoListaDados"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                    <View
+                        android:id="@+id/FundoTabela"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:background="#B8B6B6"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/QuadradoListaDados"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/FundoTabela" />
 
                     <ImageButton
                         android:id="@+id/ButtonTrocarParaViewAnalise"
@@ -134,13 +143,35 @@
                     android:layout_height="match_parent">
 
                     <View
-                        android:id="@+id/QuadradoAnalisarDados"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:id="@+id/fundoAnalise"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:background="#B8B6B6"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textAnaliseDados"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Analise de Dados com Gemini"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/fundoAnalise"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/fundoAnalise" />
+
+                    <View
+                        android:id="@+id/QuadradoAnalisarDados"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/fundoAnalise" />
 
                     <ScrollView
                         android:layout_width="0dp"
@@ -148,14 +179,15 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/buttonTrocarParaViewDados2"
                         app:layout_constraintStart_toEndOf="@+id/buttonTrocarParaViewDados"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintTop_toBottomOf="@+id/fundoAnalise">
 
                         <TextView
                             android:id="@+id/textRespostaIA"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:justificationMode="inter_word"/>
                     </ScrollView>
 
                     <ImageButton
