Add (Adicionar Cliente, Editar Cliente e Excluir Cliente do Banco)
Telas de adicionar, editar e excluir clientes foram adicionadas.
Todas as telas citadas estão funcionais.
Adicionado ViewModels para manipulação de dados (MVVM).

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cor_borda"></color>
+    <color name="color_FFEDCC">#FFEDCC</color> <!-- Cor 1 -->
+    <color name="color_DCEEFB">#DCEEFB</color> <!-- Cor 2 -->
+
 </resources>
