--- a/app/src/main/res/layout/item_lista_cliente.xml
+++ b/app/src/main/res/layout/item_lista_cliente.xml
@@ -17,15 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <View
-        android:id="@+id/view3"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="#BDBDBD"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textNomeClienteTabela"
         android:layout_width="0dp"
@@ -87,16 +78,17 @@
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:background="#BDBDBD"
         app:layout_constraintBottom_toBottomOf="@+id/fundoItemTabelaCliente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imageLupaDetalhes"
         android:layout_width="0dp"
         android:layout_height="30dp"
+        android:background="#00000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/paredeEntreTelefoneLupa"
