--- a/app/src/main/res/layout/tela_gerenciamento_cliente.xml
+++ b/app/src/main/res/layout/tela_gerenciamento_cliente.xml
@@ -14,21 +14,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textGerenciamentoCliente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Gerenciamento de Clientes"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
-        app:layout_constraintEnd_toEndOf="@+id/fundoGradiente"
-        app:layout_constraintStart_toStartOf="@+id/fundoGradiente"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50" />
-
     <ImageView
         android:id="@+id/logoApp"
         android:layout_width="70dp"
@@ -39,6 +24,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fundoGradiente"
         app:srcCompat="@drawable/logo_app__1_" />
+
+    <TextView
+        android:id="@+id/textGerenciamentoCliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Gerenciamento de Clientes"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.50" />
 
     <ImageButton
         android:id="@+id/imageVoltarTela"
@@ -74,6 +74,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/paredeEntreTelefoneLupa2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintGuide_percent="0.8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/paredeEntreNomeTelefone2"
+            android:layout_width="wrap_content"
+            android:layout_height="10dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintGuide_percent="0.4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textListaClientes"
             android:layout_width="wrap_content"
@@ -102,13 +124,16 @@
             android:id="@+id/textNomeCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="Nome"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
-            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
+            app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
             app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
@@ -117,15 +142,35 @@
             android:id="@+id/textTelefoneCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="Telefone"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
+            app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone2"
+            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
+
+        <TextView
+            android:id="@+id/textMaisTabelaCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Mais"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
             app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
+            app:layout_constraintStart_toStartOf="@+id/paredeEntreTelefoneLupa2"
             app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
 
         <View
@@ -142,18 +187,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/GrupoQuadradoBaixoGrafico"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/QuadradoGrafico">
+            app:layout_constraintTop_toBottomOf="@+id/QuadradoGrafico"
+            app:layout_constraintVertical_bias="0.0">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/QuadradoLista"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxHeight="500dp"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toTopOf="@+id/quadradoBaixoGrafico"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -176,7 +222,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
             android:backgroundTint="#00FFFFFF"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/imageFiltrarLista"
@@ -190,7 +236,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
             android:backgroundTint="#00FFFFFF"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -204,7 +250,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
             android:backgroundTint="#00FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
