--- a/app/src/main/res/layout/tela_gerenciamento_cliente.xml
+++ b/app/src/main/res/layout/tela_gerenciamento_cliente.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/logoApp"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Gerenciamento de Clientes"
+        android:text="Gerenciamento"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -53,46 +53,97 @@
         app:srcCompat="@drawable/seta_para_baixo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/GrupoIcones"
+        android:id="@+id/LayoutGerenciamento"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoApp">
+
+        <Button
+            android:id="@+id/buttonCategoria"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/button_white_transparent"
+            android:text="Categorias"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/buttonClientes"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/buttonClientes"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:background="@drawable/button_white_transparent"
+            android:text="Clientes"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/buttonServicos"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="32dp"
+            android:background="@drawable/button_white_transparent"
+            android:text="Serviços"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/buttonClientes"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <View
+            android:id="@+id/BarraTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:background="@drawable/button_add_layout_gradiente"
+            android:backgroundTint="#54000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonClientes"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <View
+            android:id="@+id/barraOpcaoSelecionado"
+            android:layout_width="100dp"
+            android:layout_height="2dp"
+            android:background="@drawable/button_add_layout_gradiente"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonClientes"
+            app:layout_constraintVertical_bias="1.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/LayoutClientes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/LayoutGerenciamento">
 
         <View
             android:id="@+id/QuadradoGrafico"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/quadrado_grafico_inicio_parte_cima"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/paredeEntreTelefoneLupa2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintGuide_percent="0.8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/paredeEntreNomeTelefone2"
-            android:layout_width="wrap_content"
-            android:layout_height="10dp"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintGuide_percent="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -111,69 +162,6 @@
 
 
         <View
-            android:id="@+id/linhaQuadradoGrafico"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:background="#BDBDBD"
-            app:layout_constraintBottom_toBottomOf="@+id/QuadradoGrafico"
-            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico" />
-
-        <TextView
-            android:id="@+id/textNomeCliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Nome"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
-            app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
-            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
-
-        <TextView
-            android:id="@+id/textTelefoneCliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Telefone"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
-            app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone2"
-            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
-
-        <TextView
-            android:id="@+id/textMaisTabelaCliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Mais"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/linhaQuadradoGrafico"
-            app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
-            app:layout_constraintStart_toStartOf="@+id/paredeEntreTelefoneLupa2"
-            app:layout_constraintTop_toBottomOf="@+id/linhaQuadradoGrafico2" />
-
-        <View
             android:id="@+id/linhaQuadradoGrafico2"
             android:layout_width="0dp"
             android:layout_height="2dp"
@@ -182,7 +170,8 @@
             app:layout_constraintEnd_toEndOf="@+id/QuadradoGrafico"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/QuadradoGrafico"
-            app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico" />
+            app:layout_constraintTop_toTopOf="@+id/QuadradoGrafico"
+            app:layout_constraintVertical_bias="1.0" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/GrupoQuadradoBaixoGrafico"
@@ -198,26 +187,86 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/QuadradoLista"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constraintBottom_toTopOf="@+id/quadradoBaixoGrafico"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:id="@+id/quadradoBaixoGrafico"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/GrupoIconesCategoria"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LayoutGerenciamento">
+
+        <View
+            android:id="@+id/QuadradoGraficoCategoria"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/quadrado_grafico_inicio_parte_cima"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textListaCategoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lista de Categorias"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintTop_toTopOf="@+id/QuadradoGraficoCategoria" />
+
+
+        <View
+            android:id="@+id/linhaQuadradoGraficoCategoria2"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="#000000"
+            app:layout_constraintBottom_toBottomOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintEnd_toEndOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintTop_toTopOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/GrupoQuadradoBaixoGraficoCategoria"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/QuadradoGraficoCategoria"
+            app:layout_constraintVertical_bias="0.0">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/QuadradoListaCategoria"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:background="@drawable/quadrado_grafico_inicio_parte_baixo"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/QuadradoLista" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageButton
+    <ImageButton
             android:id="@+id/imageAdicionarLista"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -259,5 +308,4 @@
             app:srcCompat="@drawable/button_mais_opcoes" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
