--- a/app/src/main/res/layout/tela_inicial.xml
+++ b/app/src/main/res/layout/tela_inicial.xml
@@ -288,7 +288,7 @@
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_marginStart="64dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_gerenciamento_clientes"
             android:drawableStart="@drawable/clientes_icone"
@@ -303,7 +303,7 @@
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_marginStart="64dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_gerenciamento_servicos"
             android:drawableStart="@drawable/servico_icone"
@@ -312,6 +312,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoClientes" />
+
+        <Button
+            android:id="@+id/buttonGerenciamentoCategoria"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="64dp"
+            android:background="@drawable/button_gerenciamento_servicos"
+            android:drawableStart="@drawable/servico_icone"
+            android:text="Gerenciamento de Categoria"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonGerenciamentoServico" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
