--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,13 @@
     <color name="cor_borda"></color>
     <color name="color_FFEDCC">#FFEDCC</color> <!-- Cor 1 -->
     <color name="color_DCEEFB">#DCEEFB</color> <!-- Cor 2 -->
+    <color name="color1">#FFCDD2</color>
+    <color name="color2">#C8E6C9</color>
+    <color name="color3">#BBDEFB</color>
+    <color name="color4">#FFE082</color>
+    <color name="color5">#A6212F</color>
+    <color name="color6">#2B8A2F</color>
+    <color name="color7">#3679B1</color>
+    <color name="color8">#806A2A</color>
 
 </resources>
