Add (Tela de adição, edição e exclusão da Categoria)
As telas de manipulação de registro da categoria foram implementadas.

--- a/app/src/main/res/layout/item_lista_categoria.xml
+++ b/app/src/main/res/layout/item_lista_categoria.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/person_card"
+                android:background="@drawable/categoria"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreNomeTelefone4"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,25 +55,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa"
                 app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone4"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <TextView
-                android:id="@+id/textTelefoneClienteTabela"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="TextView"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/paredeEntreTelefoneLupa"
-                app:layout_constraintStart_toStartOf="@+id/paredeEntreNomeTelefone4"
-                app:layout_constraintTop_toBottomOf="@+id/textNomeCategoriaTabela"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/paredeEntreTelefoneLupa"
