--- a/app/src/main/res/drawable/button_white_transparent.xml
+++ b/app/src/main/res/drawable/button_white_transparent.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#7FFFFFFF" />
+            <solid android:color="#EFEAEA" />
             <corners android:radius="8dp" />
             <stroke
                 android:width="1dp"
-                android:color="#7FFFFFFF" />
+                android:color="#EFEAEA" />
         </shape>
     </item>
 </selector>
