--- a/app/src/main/res/layout/tela_gerenciamento_cliente.xml
+++ b/app/src/main/res/layout/tela_gerenciamento_cliente.xml
@@ -14,17 +14,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/logoApp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fundoGradiente"
-        app:srcCompat="@drawable/logo_app__1_" />
-
     <TextView
         android:id="@+id/textGerenciamentoCliente"
         android:layout_width="wrap_content"
@@ -34,11 +23,10 @@
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintBottom_toTopOf="@+id/LayoutGerenciamento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/imageVoltarTela"
@@ -47,7 +35,7 @@
         android:layout_marginTop="24dp"
         android:backgroundTint="#00FFFFFF"
         android:rotation="90"
-        app:layout_constraintBottom_toTopOf="@+id/GrupoIcones"
+        app:layout_constraintBottom_toTopOf="@+id/LayoutGerenciamento"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/seta_para_baixo" />
@@ -57,10 +45,11 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoApp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/buttonCategoria"
@@ -103,11 +92,11 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <View
-            android:id="@+id/BarraTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:background="@drawable/button_add_layout_gradiente"
-            android:backgroundTint="#54000000"
+            android:id="@+id/barraOpcaoSelecionado3"
+            android:layout_width="100dp"
+            android:layout_height="4dp"
+            android:background="@drawable/linha_menu_button_selecionado_desativado"
+            android:backgroundTint="#9AFFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,9 +104,35 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <View
+            android:id="@+id/barraOpcaoSelecionado5"
+            android:layout_width="100dp"
+            android:layout_height="4dp"
+            android:background="@drawable/linha_menu_button_selecionado_desativado"
+            android:backgroundTint="#9AFFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCategoria"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <View
+            android:id="@+id/barraOpcaoSelecionado4"
+            android:layout_width="100dp"
+            android:layout_height="4dp"
+            android:background="@drawable/linha_menu_button_selecionado_desativado"
+            android:backgroundTint="#9AFFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonServicos"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <View
             android:id="@+id/barraOpcaoSelecionado"
             android:layout_width="100dp"
-            android:layout_height="2dp"
+            android:layout_height="4dp"
             android:background="@drawable/button_add_layout_gradiente"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -176,9 +191,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/GrupoQuadradoBaixoGrafico"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -246,9 +262,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/GrupoQuadradoBaixoGraficoCategoria"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
